--- a/modules/editor/styles/default/editor.css
+++ b/modules/editor/styles/default/editor.css
@@ -2,7 +2,7 @@
 html,body{height:100%}
 body{margin:0;padding:0}
 /* NHN (developers@xpressengine.com) */
-.xe_content{color:#000;font-size:12px;line-height:1.5}
+.xe_content{color:#000;font-size:12px;line-height:1.5;word-break:break-all;word-wrap:break-word}
 .xe_content blockquote.q1,
 .xe_content blockquote.q2,
 .xe_content blockquote.q3,
